--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <h1 class="display-4 pt-5 mb-O">Tableau de Bord</h1>
+  <h1 class="display-4 pt-5 mb-O">Gestion Admin</h1>
   <hr class="mt-0 mb-5 bg-dark">
   <div class="row">
     <div class="col-12">
-      <app-admin-properties></app-admin-properties>
+      <app-admin-sweets></app-admin-sweets>
     </div>
   </div>
 </div>
